--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Место</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
-
+<body class="root">
+  <header class="header">
+    <img src="./images/mesto-logo.svg" alt="Логотип Mesto Russia" class="header__logo">
+  </header>
 </body>
 </html>
