--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
   <header class="header">
     <img src="./images/mesto-logo.svg" alt="Логотип Mesto Russia" class="header__logo">
   </header>
+  <footer class="footer">
+    <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
+  </footer>
 </body>
 </html>
