feat: added profile

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
   <header class="header">
     <img src="./images/mesto-logo.svg" alt="Логотип Mesto Russia" class="header__logo">
   </header>
+  <main class="content">
+    <section class="profile">
+      <img src="./images/profile-avatar.jpg" alt="Фотография Жака-Ива Кусто" class="profile__avatar">
+      <div class="profile__info">
+        <div class="profile__biography">
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button"></button>
+        </div>
+        <p class="profile__description">Исследователь океана</p>
+      </div>
+      <button class="profile__add-button"></button>
+    </section>
+  </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
   </footer>
