feat: added elements

--- a/index.html
+++ b/index.html
@@ -23,6 +23,51 @@
       </div>
       <button class="profile__add-button"></button>
     </section>
+
+    <section class="elements">
+      <article class="element">
+        <img src="./images/elements-karachaevsk.jpg" alt="Фотография храма в Карачаевске" class="element__image">
+        <div class="element__caption">
+          <h2 class="element__title">Карачаевск</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/elements-elbrus.jpg" alt="Фотография горы Эльбрус на горизонте" class="element__image">
+        <div class="element__caption">
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/elements-dombai.jpg" alt="Фотография горного хребта на Домбае" class="element__image">
+        <div class="element__caption">
+          <h2 class="element__title">Домбай</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/elements-elbrus.jpg" alt="Фотография горы Эльбрус на горизонте" class="element__image">
+        <div class="element__caption">
+          <h2 class="element__title">Гора Эльбрус</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/elements-dombai.jpg" alt="Фотография горного хребта на Домбае" class="element__image">
+        <div class="element__caption">
+          <h2 class="element__title">Домбай</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </article>
+      <article class="element">
+        <img src="./images/elements-karachaevsk.jpg" alt="Фотография храма в Карачаевске" class="element__image">
+        <div class="element__caption">
+          <h2 class="element__title">Карачаево-Черкесия</h2>
+          <button class="element__like-button"></button>
+        </div>
+      </article>
+    </section>
   </main>
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
