--- a/index.html
+++ b/index.html
@@ -72,5 +72,16 @@
   <footer class="footer">
     <p class="footer__copyright">&copy; 2021 Mesto Russia</p>
   </footer>
+  <div class="popup">
+    <div class="popup__container">
+      <button type="button" class="popup__close-button"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form">
+        <input type="text" class="popup__input popup__input_type_name" id="profile-name" name="inputName" placeholder="Имя">
+        <input type="text" class="popup__input popup__input_type_description" id="profile-description" name="inputDescription" placeholder="О себе">
+        <button type="submit" class="popup__submit-button"></button>
+      </form>
+    </div>
+  </div>
 </body>
 </html>
