--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <div class="profile__info">
         <div class="profile__biography">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <button class="profile__edit-button"></button>
+          <button type="button" aria-label="Редактировать профиль" class="profile__edit-button"></button>
         </div>
         <p class="profile__description">Исследователь океана</p>
       </div>
-      <button class="profile__add-button"></button>
+      <button type="button" aria-label="Добавить фотографию" class="profile__add-button"></button>
     </section>
 
     <section class="elements">
@@ -29,42 +29,42 @@
         <img src="./images/elements-karachaevsk.jpg" alt="Фотография храма в Карачаевске" class="element__image">
         <div class="element__caption">
           <h2 class="element__title">Карачаевск</h2>
-          <button class="element__like-button"></button>
+          <button type="button" aria-label="Поставить лайк" class="element__like-button"></button>
         </div>
       </article>
       <article class="element">
         <img src="./images/elements-elbrus.jpg" alt="Фотография горы Эльбрус на горизонте" class="element__image">
         <div class="element__caption">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button class="element__like-button"></button>
+          <button type="button" aria-label="Поставить лайк" class="element__like-button"></button>
         </div>
       </article>
       <article class="element">
         <img src="./images/elements-dombai.jpg" alt="Фотография горного хребта на Домбае" class="element__image">
         <div class="element__caption">
           <h2 class="element__title">Домбай</h2>
-          <button class="element__like-button"></button>
+          <button type="button" aria-label="Поставить лайк" class="element__like-button"></button>
         </div>
       </article>
       <article class="element">
         <img src="./images/elements-elbrus.jpg" alt="Фотография горы Эльбрус на горизонте" class="element__image">
         <div class="element__caption">
           <h2 class="element__title">Гора Эльбрус</h2>
-          <button class="element__like-button"></button>
+          <button type="button" aria-label="Поставить лайк" class="element__like-button"></button>
         </div>
       </article>
       <article class="element">
         <img src="./images/elements-dombai.jpg" alt="Фотография горного хребта на Домбае" class="element__image">
         <div class="element__caption">
           <h2 class="element__title">Домбай</h2>
-          <button class="element__like-button"></button>
+          <button type="button" aria-label="Поставить лайк" class="element__like-button"></button>
         </div>
       </article>
       <article class="element">
         <img src="./images/elements-karachaevsk.jpg" alt="Фотография храма в Карачаевске" class="element__image">
         <div class="element__caption">
           <h2 class="element__title">Карачаево-Черкесия</h2>
-          <button class="element__like-button"></button>
+          <button type="button" aria-label="Поставить лайк" class="element__like-button"></button>
         </div>
       </article>
     </section>
@@ -74,12 +74,12 @@
   </footer>
   <div class="popup">
     <div class="popup__container">
-      <button type="button" class="popup__close-button"></button>
+      <button type="button" aria-label="Закрыть попап" class="popup__close-button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form class="popup__form">
+      <form name="popupForm" class="popup__form">
         <input type="text" class="popup__input popup__input_type_name" id="profile-name" name="inputName" placeholder="Имя">
         <input type="text" class="popup__input popup__input_type_description" id="profile-description" name="inputDescription" placeholder="О себе">
-        <button type="submit" class="popup__submit-button"></button>
+        <button type="submit" class="popup__submit-button">Сохранить</button>
       </form>
     </div>
   </div>
