--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
     <div class="popup__container">
       <button type="button" aria-label="Закрыть попап" class="popup__close-button popup__close-button_type_edit"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <form name="popup-form-edit" class="popup__form popup__form_type_edit">
-        <input type="text" class="popup__input popup__input_type_name" id="profile-name" name="input-name" placeholder="Имя" required>
-        <input type="text" class="popup__input popup__input_type_description" id="profile-description" name="input-description" placeholder="О себе" required>
-        <button type="submit" class="popup__submit-button popup__submit-button_type_edit">Сохранить</button>
+      <form name="popup-form-edit" class="popup__form popup__form_type_edit" novalidate>
+        <input type="text" class="popup__input popup__input_type_name" id="profile-name" name="input-name" minlength="2" maxlength="40" placeholder="Имя" required>
+        <span class="popup__input-error popup__input-error_type_name" id="profile-name-error"></span>
+        <input type="text" class="popup__input popup__input_type_description" id="profile-description" name="input-description" minlength="2" maxlength="200" placeholder="О себе" required>
+        <span class="popup__input-error popup__input-error_type_description" id="profile-description-error"></span>
+        <button type="submit" class="popup__submit-button">Сохранить</button>
       </form>
     </div>
   </div>
@@ -48,10 +50,12 @@
     <div class="popup__container">
       <button type="button" aria-label="Закрыть попап" class="popup__close-button popup__close-button_type_add"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form name="popup-form-add" class="popup__form popup__form_type_add">
-        <input type="text" class="popup__input popup__input_type_title" id="element-title" name="input-title" placeholder="Название" required>
+      <form name="popup-form-add" class="popup__form popup__form_type_add" novalidate>
+        <input type="text" class="popup__input popup__input_type_title" id="element-title" name="input-title" minlength="2" maxlength="30" placeholder="Название" required>
+        <span class="popup__input-error popup__input-error_type_title" id="element-title-error"></span>
         <input type="url" class="popup__input popup__input_type_link" id="element-link" name="input-link" placeholder="Ссылка на картинку" required>
-        <button type="submit" class="popup__submit-button popup__submit-button_type_add">Создать</button>
+        <span class="popup__input-error popup__input-error_type_link" id="element-link-error"></span>
+        <button type="submit" class="popup__submit-button">Создать</button>
       </form>
     </div>
   </div>
@@ -75,6 +79,8 @@
     </article>
   </template>
 
+  <script src="./scripts/initial-elements.js"></script>
+  <script src="./scripts/validate.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 </html>
