refactor: modified opening and closing popups

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <span class="popup__input-error popup__input-error_type_title" id="element-title-error"></span>
         <input type="url" class="popup__input popup__input_type_link" id="element-link" name="input-link" placeholder="Ссылка на картинку" required>
         <span class="popup__input-error popup__input-error_type_link" id="element-link-error"></span>
-        <button type="submit" class="popup__submit-button">Создать</button>
+        <button type="submit" class="popup__submit-button popup__submit-button_type_add">Создать</button>
       </form>
     </div>
   </div>
