refactor: modified validation showing

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <span class="popup__input-error popup__input-error_type_name" id="profile-name-error"></span>
         <input type="text" class="popup__input popup__input_type_description" id="profile-description" name="input-description" minlength="2" maxlength="200" placeholder="О себе" required>
         <span class="popup__input-error popup__input-error_type_description" id="profile-description-error"></span>
-        <button type="submit" class="popup__submit-button">Сохранить</button>
+        <button type="submit" class="popup__submit-button popup__submit-button_type_edit">Сохранить</button>
       </form>
     </div>
   </div>
