--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <span class="popup__input-error popup__input-error_type_name" id="profile-name-error"></span>
         <input type="text" class="popup__input popup__input_type_description" id="profile-description" name="input-description" minlength="2" maxlength="200" placeholder="О себе" required>
         <span class="popup__input-error popup__input-error_type_description" id="profile-description-error"></span>
-        <button type="submit" class="popup__submit-button popup__submit-button_type_edit">Сохранить</button>
+        <button type="submit" class="popup__submit-button">Сохранить</button>
       </form>
     </div>
   </div>
@@ -55,7 +55,7 @@
         <span class="popup__input-error popup__input-error_type_title" id="element-title-error"></span>
         <input type="url" class="popup__input popup__input_type_link" id="element-link" name="input-link" placeholder="Ссылка на картинку" required>
         <span class="popup__input-error popup__input-error_type_link" id="element-link-error"></span>
-        <button type="submit" class="popup__submit-button popup__submit-button_type_add">Создать</button>
+        <button type="submit" class="popup__submit-button">Создать</button>
       </form>
     </div>
   </div>
@@ -78,9 +78,9 @@
       <button type="button" aria-label="Удалить фотографию" class="element__delete-button"></button>
     </article>
   </template>
-
-  <script src="./scripts/initial-elements.js"></script>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/index.js"></script>
+  
+  <script type="module" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
+  <script type="module" src="./scripts/Card.js"></script>
 </body>
 </html>
