--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <img src="./images/mesto-logo.svg" alt="Логотип Mesto Russia" class="header__logo">
   </header>
-  <main class="content">
+  <main class="main">
     <section class="profile">
       <img src="./images/profile-avatar.jpg" alt="Фотография Жака-Ива Кусто" class="profile__avatar">
       <div class="profile__info">
@@ -37,9 +37,9 @@
       <button type="button" aria-label="Закрыть попап" class="popup__close-button popup__close-button_type_edit"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form name="popup-form-edit" class="popup__form popup__form_type_edit" novalidate>
-        <input type="text" class="popup__input popup__input_type_name" id="profile-name" name="input-name" minlength="2" maxlength="40" placeholder="Имя" required>
+        <input type="text" class="popup__input popup__input_type_name" id="profile-name" name="name" minlength="2" maxlength="40" placeholder="Имя" required>
         <span class="popup__input-error popup__input-error_type_name" id="profile-name-error"></span>
-        <input type="text" class="popup__input popup__input_type_description" id="profile-description" name="input-description" minlength="2" maxlength="200" placeholder="О себе" required>
+        <input type="text" class="popup__input popup__input_type_description" id="profile-description" name="description" minlength="2" maxlength="200" placeholder="О себе" required>
         <span class="popup__input-error popup__input-error_type_description" id="profile-description-error"></span>
         <button type="submit" class="popup__submit-button">Сохранить</button>
       </form>
@@ -51,9 +51,9 @@
       <button type="button" aria-label="Закрыть попап" class="popup__close-button popup__close-button_type_add"></button>
       <h2 class="popup__title">Новое место</h2>
       <form name="popup-form-add" class="popup__form popup__form_type_add" novalidate>
-        <input type="text" class="popup__input popup__input_type_title" id="element-title" name="input-title" minlength="2" maxlength="30" placeholder="Название" required>
+        <input type="text" class="popup__input popup__input_type_title" id="element-title" name="name" value="" minlength="2" maxlength="30" placeholder="Название" required>
         <span class="popup__input-error popup__input-error_type_title" id="element-title-error"></span>
-        <input type="url" class="popup__input popup__input_type_link" id="element-link" name="input-link" placeholder="Ссылка на картинку" required>
+        <input type="url" class="popup__input popup__input_type_link" id="element-link" name="link" value="" placeholder="Ссылка на картинку" required>
         <span class="popup__input-error popup__input-error_type_link" id="element-link-error"></span>
         <button type="submit" class="popup__submit-button">Создать</button>
       </form>
@@ -79,8 +79,6 @@
     </article>
   </template>
   
-  <script type="module" src="./scripts/FormValidator.js"></script>
-  <script type="module" src="./scripts/index.js"></script>
-  <script type="module" src="./scripts/Card.js"></script>
+  <script type="module" src="./pages/index.js"></script>
 </body>
 </html>
