--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Торшин Тимофей">
   <title>Место</title>
+  <!---
   <link rel="stylesheet" href="./pages/index.css">
+  -->
 </head>
 <body class="root">
   <header class="header">
-    <img src="./images/mesto-logo.svg" alt="Логотип Mesto Russia" class="header__logo">
+    <img src="<%=require('./images/mesto-logo.svg')%>" alt="Логотип Mesto Russia" class="header__logo">
   </header>
   <main class="main">
     <section class="profile">
-      <img src="./images/profile-avatar.jpg" alt="Фотография Жака-Ива Кусто" class="profile__avatar">
+      <img src="<%=require('./images/profile-avatar.jpg')%>" alt="Фотография Жака-Ива Кусто" class="profile__avatar">
       <div class="profile__info">
         <div class="profile__biography">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -78,7 +80,8 @@
       <button type="button" aria-label="Удалить фотографию" class="element__delete-button"></button>
     </article>
   </template>
-  
+  <!--
   <script type="module" src="./pages/index.js"></script>
+  -->
 </body>
 </html>
