feat: server connection

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Торшин Тимофей">
   <title>Место</title>
-  <!---
-  <link rel="stylesheet" href="./pages/index.css">
-  -->
 </head>
 <body class="root">
   <header class="header">
@@ -15,7 +12,10 @@
   </header>
   <main class="main">
     <section class="profile">
-      <img src="<%=require('./images/profile-avatar.jpg')%>" alt="Фотография Жака-Ива Кусто" class="profile__avatar">
+      <div class="profile__avatar-container">
+        <img src="<%=require('./images/profile-avatar.jpg')%>" alt="Фотография Жака-Ива Кусто" class="profile__avatar">
+        <img src="<%=require('./images/profile-avatar-button.svg')%>" alt="Иконка редактирования аватара" class="profile__avatar-edit">
+      </div>
       <div class="profile__info">
         <div class="profile__biography">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -52,7 +52,7 @@
     <div class="popup__container">
       <button type="button" aria-label="Закрыть попап" class="popup__close-button popup__close-button_type_add"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form name="popup-form-add" class="popup__form popup__form_type_add" novalidate>
+      <form name="popup-form-add" class="popup__form popup__form_type_add" method="POST" novalidate>
         <input type="text" class="popup__input popup__input_type_title" id="element-title" name="name" value="" minlength="2" maxlength="30" placeholder="Название" required>
         <span class="popup__input-error popup__input-error_type_title" id="element-title-error"></span>
         <input type="url" class="popup__input popup__input_type_link" id="element-link" name="link" value="" placeholder="Ссылка на картинку" required>
@@ -70,18 +70,40 @@
     </figure>
   </div>
 
+  <div class="popup popup_type_confirm">
+    <div class="popup__container">
+      <button type="button" aria-label="Закрыть попап" class="popup__close-button popup__close-button_type_confirm"></button>
+      <h2 class="popup__title">Вы уверены?</h2>
+      <form name="popup-form-confirm" class="popup__form popup__form_type_confirm" novalidate>
+        <button type="submit" class="popup__submit-button">Да</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="popup popup_type_avatar">
+    <div class="popup__container">
+      <button type="button" aria-label="Закрыть попап" class="popup__close-button popup__close-button_type_avatar"></button>
+      <h2 class="popup__title">Обновить аватар</h2>
+      <form name="popup-form-avatar" class="popup__form popup__form_type_avatar" novalidate>
+        <input type="url" class="popup__input popup__input_type_link" id="profile-avatar" name="link" value="" placeholder="Ссылка на картинку" required>
+        <span class="popup__input-error popup__input-error_type_link" id="profile-avatar-error"></span>
+        <button type="submit" class="popup__submit-button">Сохранить</button>
+      </form>
+    </div>
+  </div>
+
   <template id="element-template">
     <article class="element">
       <img src="#" alt="#" class="element__image">
       <div class="element__caption">
         <h2 class="element__title"></h2>
-        <button type="button" aria-label="Поставить лайк" class="element__like-button"></button>
+        <div class="element__like-container">
+          <button type="button" aria-label="Поставить лайк" class="element__like-button"></button>
+          <p class="element__like-counter"></p>
+        </div>
       </div>
       <button type="button" aria-label="Удалить фотографию" class="element__delete-button"></button>
     </article>
   </template>
-  <!--
-  <script type="module" src="./pages/index.js"></script>
-  -->
 </body>
 </html>
